Ajout de la partie administration pour le planning. (WIP)

--- a/ng_PetBoarding_app/src/app/features/admin/components/prestation-detail/admin-prestation-detail.component.html
+++ b/ng_PetBoarding_app/src/app/features/admin/components/prestation-detail/admin-prestation-detail.component.html
@@ -93,5 +93,11 @@
         </button>
       </mat-card-actions>
     </mat-card>
+
+    <!-- Section Planning -->
+    <app-prestation-schedule 
+      [prestationId]="prestation()!.id"
+      [prestationName]="prestation()!.libelle">
+    </app-prestation-schedule>
   }
 </div>
